# pgdb-rs

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  format.sh  shell.nix
pgdb/: Cargo.toml  README.md
pgdb/src/: db_instance.rs  error.rs  lib.rs
pgdb_cli/: Cargo.toml  README.md
pgdb_cli/src/: main.rs
src/: lib.rs
