[package]
name = "pgdb"
version = "0.1.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
description = "Creates and runs Postgres databases through Rust in temporary directories, cleaned up on drop"
repository = "https://github.com/mbr/pgdb-rs"
docs = "https://docs.rs/pgdb"
license = "MIT OR Apache-2.0"

[dependencies]
hex_fmt = "0.3.0"
rand = "0.8.3"
tempfile = "3.2.0"
thiserror = "1.0.25"
which = "4.1.0"
process_guard = "0.2.0"
