[package]
name = "pgdb"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
description = "Creates and runs Postgres databases through Rust in temporary directories, cleaned up on drop"
readme = "README.md"

[dependencies]
hex_fmt = "0.3.0"
rand = "0.8.3"
tempfile = "3.2.0"
thiserror = "1.0.25"
which = "4.1.0"
process_guard = "0.2.0"
