[package]
name = "pgdb_cli"
version = "0.1.2"
authors = [ "Marc Brinkmann <git@marcbrinkmann.de>" ]
edition = "2018"
description = "Command-line application to run a Postgres database"
repository = "https://github.com/mbr/pgdb-rs"
documentation = "https://docs.rs/pgdb_cli"
license = "MIT OR Apache-2.0"

[dependencies]
pgdb = "0.1.1"
structopt = "0.3.21"
anyhow = "1.0.41"

[[bin]]
name = "pgdb"
path = "src/main.rs"
