[package]
name = "pgdb_cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
description = "Command-line application to run a Postgres database"

[dependencies]
pgdb = "0.3.0"
structopt = "0.3.21"
anyhow = "1.0.41"

[[bin]]
name = "pgdb"
path = "src/main.rs"
