[package]
name = "pgdb_cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
description = "Command-line application to run a Postgres database"

[dependencies]
pgdb = { version = "0.4.0", path = "../pgdb" }
structopt = "0.3.21"
anyhow = "1.0.41"

[[bin]]
name = "pgdb"
path = "src/main.rs"
